--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage{parskip}
 \usepackage{gensymb}
+\usepackage{graphicx}
+\usepackage{amsmath}
+\usepackage[a4paper, total={8in, 10in}]{geometry}
 
 \title{Climate Change - Geological Perspective at Stockholms Universitet}
 \author{Tomek Garbus}
@@ -12,5 +15,6 @@
 \maketitle
 
 \input{content/reading_assignment1}
+\input{content/lecture1}
 
 \end{document}
