--- a/content/lecture1.tex
+++ b/content/lecture1.tex
@@ -115,3 +115,31 @@ $
 \rightarrow
 \underset{\text{Shells of organisms}}{CaCO_3 + SiO_2 + H_2O}
 $
+
+\subsection{Chemical weathering of silicate rocks}
+First stage of chemical weathering happens under the influence of rain:
+
+$
+\text{Granite} + H_2O + 2 CO_2 =
+\text{Clay} + 2K^+ + 2 HCO_3^-
+$
+
+During the weathering, carbon dioxide switches from being a greenhouse gas
+to being a sollute.
+
+The bicarbonate ions are then carried by rivers and eventually end up in seas
+and oceans. In the ocean, bicarbonates find calcium which they react with, and
+make limestone, which is calcium carbonate.
+
+$
+2 HCO_3^- + Ca^{2+} = \underset{\text{limestone}}{CaCO_3} + H_2O + CO_2
+$
+
+We took 2 molecules of carbon from the atmosphere, and return only one, the
+other one is deposited in limestone.
+Thus the precipitation limestone is a sink.
+
+Q: Can chemical weathering of silicate rocks compensate for anthropogenic
+CO$_2$ emissions?
+
+A: No, it is way too slow.
