More on reading assignment 2

--- a/content/reading_assignment2.tex
+++ b/content/reading_assignment2.tex
@@ -136,3 +136,50 @@ archives:
 	\item the rate at which the record is buried beneath additional
 	sediments and therebey protected from further disturbance
 \end{itemize}
+
+\subsection{Climate proxies}
+
+Scientists must first determine the mechanism by which climate signals are
+recorded by the proxy indicators in order to use them to decipher climate
+changes.
+
+Two climate proxies most commonly used:
+\begin{itemize}
+	\item Biotic proxies, based on canges in composition of plant and
+	animal groups
+	\item Geological-geochemical proxies, measurements of mass movements
+	of materials through the climate system, either as discrete (physical)
+	particles or in dissolved (chemical) form.
+\end{itemize}
+
+Abundance of \textbf{pollen} helps reconstruct the climate on land for younger
+time intervals.
+
+Types of shelled remains of plankton:
+
+\begin{itemize}
+	\item CaCO$_3$: foraminifera
+	\item CaCO$_3$: coccoliths
+	\item SiO$_2$: diatoms
+	\item SiO$_2$: radiolaria
+\end{itemize}
+
+Sediments rich in CaCO$_3$ fossils occur in open-ocean waters at depths above
+3500-4000 meters. Below that level, corrosive bottom waters dissolve calcite
+shells. SiO$_2$-shelled diatoms inhabit deltas and other coastal areas and
+extract silica from river water flowing off the land.
+
+\subsection{Geological and geochemical data}
+
+Sediment is eroded from the land and deposited in ocean basins in two forms:
+\begin{itemize}
+	\item \textbf{physical weathering}, the process by which water, wind
+	and ice physically detach pieces of bedrock and reduce them to smaller
+	fragments. Examples include ice-rafted debris (sand and gravel eroded
+	by ice sheets and delivered by icebergs that melt in ocean), eolian
+	sediments (silts and clays lifted from the continents and blown to
+	ocean by winds).
+	\item \textbf{chemical weathering} and subsequent transport of
+	dissolved ions to the oceans in rivers. It occurs mainly in two ways:
+	hydrolysis and dissolution.
+\end{itemize}
