Complete reading assignment 2

--- a/content/reading_assignment2.tex
+++ b/content/reading_assignment2.tex
@@ -183,3 +183,267 @@ Sediment is eroded from the land and deposited in ocean basins in two forms:
 	dissolved ions to the oceans in rivers. It occurs mainly in two ways:
 	hydrolysis and dissolution.
 \end{itemize}
+
+\subsection{Key terms}
+
+\textbf{Moraines}: long curving ridges created by retreating ice sheets.
+
+\textbf{Loess}: sequences of silt\footnote{pl: muł} deposited by wind as thick
+layers.
+
+\textbf{Historical archives}: human-made records of climate-related phenomena,
+available from last few thousand years.
+
+\textbf{Instrumental records}: are available from last 100 to 200 years since
+the emergence of the first thermometers in the eighteenth century.
+
+\textbf{Radiometric dating}: Radiometric dating is based on the radioactive
+decay of a parent isotope to a daughter isotope. Time elapsed is measured by
+comparing the abundance of these two and combining this data with the half-life
+of parent.
+
+\textbf{Parent isotope}: An unstable radioactive isotope of one element which
+transforms through radioactive decay to another.
+
+\textbf{Daughter isotope}: The isotope resulting from the process of
+radioactive decay.
+
+\textbf{Closed system}: A system in which the changes are not driven by
+external factors but the content of the system itself, fx internal
+radioactive decay.
+
+\textbf{Half-life}: One half-life is the time needed for half the parent that
+was present previously to decay to the daughter isotope.
+
+\textbf{Radiocarbon dating}: Cosmic rays generate neutrons as they travel
+through the atmosphere which can strike $^{14}$N atoms and turn them into
+$^{14}$C, also called radiocarbon, which has a half time of 5730 years.
+Radiocarbon atoms are ingested by animals and plants through the diet. Once
+they die, they stop exchanging carbon with their surroundings, so the content
+of radiocarbon in their organisms decreases. Since it decreases at a known rate
+we can estimate the organisms' age. The daughter isotope of $^{14}$C is again
+nitrogen $^{14}$C. Radiocarbon dating was invented by Willard Libby.
+
+\textbf{Varves}: annual couplets, sediments in some lakes. They result from
+seasonal alternatoins between deposition of light-hued mineral-rich debris
+and darker sediment rich in organic material.
+
+\textbf{Tree rings}: alternations between thick layers of lighter wood tissue
+(cellulose) formed by rapid growth in spring, and thin dark layers marking
+cessation of growth in autumn and winter.
+
+\textbf{Coral bands}: recorded seasonal changes in the texture of the calcite
+(CaCO$_3$) in corals' skeletons. The lighter parts are laid down during
+intervals of fast growth and the darker layers when growth slows.
+
+\textbf{Climate proxies}: indicators of past climate, indirect signals of
+past climate.
+
+\textbf{Biotic proxies}: climate proxies based on changes in composition of
+plant and animal groups.
+
+\textbf{Geological-geochemical proxies}: measurements of mass movements of
+materials through the climate system, either as discrete (physical) particles
+or in dissolved (chemical) forms.
+
+\textbf{Macrofossils}: larger vegetation remains that cannot have been carried
+far from their points of origin, such as cones, seeds and leaves.
+
+\textbf{Plankton}: diverese collection of organisms that drift in water or air
+but are unable to actively propel themselves against current or wind.
+
+\textbf{Planktic foraminifera}: globular sand-sized animals that inhabit upper
+layers of the ocean.
+
+\textbf{Coccoliths}: individual plates or scales of coccolithophores made of
+calcium carbonate (CaCO$_3$).
+
+\textbf{Diatoms}: hard-shelled plankton, silt-sized plant plankton shaped
+like pillboxes or needles. Secrete shells of opaline silica
+(SiO$_2$ $\cdot$ H$_2$O).
+
+\textbf{Radiolaria}: sand-sized animals with ornate shells often resembling
+pre-modern (Prussian) military helmets. Create shells of opaline silica
+(SiO$_2$ $\cdot$ H$_2$O).
+
+\textbf{Burial fluxes}: measures of the mass of sediment deposited per unit
+area per unit time. Useful for mapping the changes in the patterns of
+deposition of ocean sediments spanning the last 170 million years.
+
+\textbf{Physical weathering}: the process by which water, wind and ice
+physically detach pieces of bedrock and reduce them to smaller fragments.
+
+\textbf{Ice-rafted debris}: a type of sediment created by physical weathering.
+It results from eroded ice sheets and is delivered by icebergs that melt in
+ocean waters. It consists of sand and gravel.
+
+\textbf{Eolian sediments}: silts and clays lifted from the continents and blown
+to the ocean by winds.
+
+\textbf{Fluvial sediments}: refers to the process of creating deposits by
+carrying sediments by rivers and streams.
+
+\textbf{Chemical weathering}: a second major way of removing sediments from
+the land (the other one is physical weathering). Chemical weathering happens
+through changing the chemical composition of the rock. Subsequently, the
+dissolved ions are transported to the oceans in rivers.
+
+\textbf{Dissolution}: one of two types of chemical weathering, in which
+carbonate rocks (such as limestone, made of CaCO$_3$) and evaporite rocks
+(such as rock salt, made of NaCl) are dissolved in water.
+
+\textbf{Hydrolysis}: one of two types of chemical weathering, in which the
+weathering process adds water to the minerals derived from continental rocks
+made of silicates, such as basalts and granites.
+
+\textbf{Benthic foraminifera}: sand-sized animals that live on the seafloor and
+form calcite (CaCO$_3$) shells from Ca$^{+2}$ and CO$_{3}^{-2}$ ions in deep
+waters.
+
+\textbf{Physical climate models}: numerical (computer) models used by climate
+scientists which emphasize the physical operation of the climate system,
+particularly the circulation of the atmosphere and ocean but also interactions
+with global vegetation (biology) and with atmospheric trace gases (chemistry).
+
+\textbf{Geochemical models}: models that track the movement of distinctive
+chemical tracers throughthe climate system.
+
+\textbf{Control case}: simulation of the modern climate. Models must be
+capable of simulating modern climate reasonably well in order to be trusted for
+exploring past climates.
+
+\textbf{Boundary conditions}: the features that are altered to test hypotheses
+of climate change, such as height of mountains, presence of ice sheets, level
+of CO$_2$ in the atmosphere.
+
+\textbf{Climate simulation}: the process of runing a climate model during an
+experiment.
+
+\textbf{Climate data output}: the climatic data produced in a simulation.
+
+\textbf{Aerosols}: airborne particles, such as volcanic ash and dust.
+
+\textbf{Atmospheric general circulation models (A-GCMs)}: three dimensional
+climate models  that incorporate many key features of the real world: the
+spatial distribution of land, water and ice, the elevation of mountains and
+ice sheets, the mount of vertical distribution of greenhouse gases in the
+atmosphere, the seasonal variations in solar radiation.
+
+\textbf{Grid boxes}: boundary conditions for A-GCM experiments are specified
+for hundreds of model grid boxes.
+
+\textbf{Sensitivity test}: An approach to A-GCM experiments, where one
+boundary condition at a time is altered in relation to the present
+configuration. When the output of such an experiment is compared to the
+output from the modern control case, the differences in climate between the
+two runs isolate and reveal the unique impact caused by the change in that one
+boundary condition.
+
+\textbf{Reconstruction}: An experiment with climate model where all known
+boundary conditions are changed at the same time in order to try to simulate
+the full state of the climate system at some time in the past.
+
+\textbf{Ocean general circulation models (O-GCMs)}: are usually simpler than
+A-GCMs. One reason is that climate researchers know much less about the
+modern circulation of the oceans, especially critical processes such as the
+brief but intense episodes when deep water forms at high latitudes.
+
+\textbf{Geochemical tracers}: chemical materials that are tracked by
+geochemical circulation models.
+
+\textbf{Reservoirs}: environments containing the chemicals, such as the
+atmosphere, ocean, ice, vegetation and sediments.
+
+\textbf{Mass balance models}: models that trace the movements of chemicals
+between reservoirs.
+
+\textbf{Residence time}: the average time it takes for a geochemical tracer to
+pass through a reservoir. For a reservoir at a steady state (equal pace of
+output and input flux), this time is equal to:
+$\text{residence time} = \frac{\text{reservoir size}}{\text{Flux rate in
+(or out)}}$
+
+\subsection{Review questions}
+
+\subsubsection{Why does the importance of different climate archives change
+for different time scales?}
+Different climate archives vary in precision and availability back in time:
+\begin{itemize}
+	\item \textbf{Instrumental}: 10$^2$-0 years back
+	\item \textbf{Historical}: 10$^3$-0 years back
+	\item \textbf{Tree rings}: 10$^4$-0 years back
+	\item \textbf{Ice cores}: 10$^6$-0 years back
+	\item \textbf{Lake sediments}: up to $10^9$ years back
+	\item \textbf{Coral reefs}: 10$^6$-0 years back
+	\item \textbf{Ocean sediments}: up to $10^9$ years back
+	\item \textbf{Continental coastal sediments}: up to $10^9$ years back
+\end{itemize}
+
+\subsubsection{Why are ocean sediments and ice cores especially important
+archives of climate?}
+Deep ocean is generally undisturbed with relatively continuous deposition.
+It usually yields climate records of higher quality than records from land,
+where water, ice and wind repeatedly erode deposits.
+
+Ice cores retrieve climate records extending back thousands of years in small
+mountain glaciers to as much as hundreds of thousands of years in
+continent-sized ice sheets.
+
+\subsubsection{How does the method of dating climate records vary with the
+type of archive?}
+For vegetation and organisms, radiocarbon dating is used. For many kinds of
+rocks. radiometric dating and correlation. Counting annual layers works for
+some sediments in water, tree rings, or coral bands. Orbital cycles can be
+used to date low-latitude monsoons and the growth-decay cycle of
+high-latitude ice sheets.
+
+\subsubsection{How does the resolution from sedimentary archives vary with
+depositional environment?}
+In the oceans, four groups of shell-forming animal and plankton are used for
+reconstructions, two of which made of calcite and two of opaline silica.
+
+In lakes, annual sediment varves are used.
+
+On bedrock, annual ice layers can be analysed.
+
+\subsubsection{Which two major groups of organisms are most important to
+climate reconstructions over the past several million years?}
+
+Plankton and pollen (vegetation).
+
+\subsubsection{Describe how the products derived from physical and chemical
+weathering provide different kinds of information about the climate system.}
+
+Physically weathered sediments reveal the climate of the source regions, for
+example grains of quartz and other minerals from ice sheets indicate cold
+climates.
+
+Chemically weathered sediments record changes in the global volume of ice and
+in local ocean temperatures.
+
+\subsubsection{Describe the two ways the performance of climate models is
+evaluated.}
+\begin{itemize}
+	\item control case -- simulation of modern climate
+	\item testing climate data output against independent geologic data
+	that played no part in the experimental design
+\end{itemize}
+
+\subsubsection{Why aren't models of the atmosphere and ocean allowed to
+interact continuously?}
+Air and water responde to climate changes at different rates that impose
+different computational demands. Ocean models can ignore interactions that
+occur on a daily cycle because these short-term changes have negligible effects
+on most ocean circulation. As a result, O-GCMs generally only need to calculate
+changes over timesteps separated by a month or more. By contrast, daily changes
+are critical to models of the fast-responding atmosphere.
+
+\subsubsection{Describe two features that make the ocean useful in geochemical
+mass balance models.}
+\begin{itemize}
+	\item isotopic composition of oxygen in the H$_2$O molecules that are
+	deposited in ice sheets differs from the average composition of the
+	molecules left in the ocean.
+	\item terrestial carbon (vegetation) is enriched in one isotope of
+	carbon compared to the average in the ocean
+\end{itemize}
