Notes from Lecture 2

--- a/main.tex
+++ b/main.tex
@@ -17,5 +17,6 @@
 \input{content/reading_assignment1}
 \input{content/lecture1}
 \input{content/reading_assignment2}
+\input{content/lecture2}
 
 \end{document}
