--- a/content/reading_assignment3.tex
+++ b/content/reading_assignment3.tex
@@ -1,4 +1,4 @@
-\section{Reading assignment 3: Astronomical control of solar radiation}:
+\section{Reading assignment 3: Astronomical control of solar radiation}
 
 \subsection{Key terms}
 
@@ -118,7 +118,8 @@ they nearly cancel each other out.
 opposite timing at any single location on Earth? Why or why not?}
 They have have exactly opposite timing, they are exactly out of phase. This is
 because the tilt that brings one pole closer to the Sun, also puts the other
-pole farther from the Sun.
+pole farther from the Sun. More intense summer insolation maxima and deeper
+winter insolation minima occur together at any one location.
 
 \subsubsection{Do the following changes occur at the same time (same year) in
 Earth's orbital cycles?}
@@ -130,3 +131,95 @@ No, they are out of phase.
 \textbf{Summer insolation maxima in the tropics of both hemispheres by
 precession?}
 Yes, they are in phase.
+
+\section{Reading assignment 3: Insolation Control of Monsoons}
+
+\textbf{Monsoon creation}: In summer, strong solar radiation causes a rapid and
+large warming of the land, but a slower and much less intense warming of the
+ocean. Rapid heating over the continents causes air to warm, expand and rise,
+and the upward movement of the air creates an area of low pressure at the
+surface. The air flowing toward this low-pressure region also warms and rises.
+The air arriving from nearby ocean carries water vapor that condenses and
+contributes to monsoonal rainfall.
+
+In winter, when solar radiation is weaker, air over the land cools off rapidly,
+becomes denser than the air over the still-warm ocean, and sinks from higher
+levels in the atmosphere. This downward movement creates a region of high
+pressure over the land, in contrast to the lower pressure over the still-warm
+oceans. The overall atmospheric flow in winter is a downward-and-outward
+movement of cold, dry air from the land to the sea.
+
+\subsection{Key terms}
+
+\textbf{Orbital monsoon hypothesis}: The idea that changes in insolation
+control the strength of monsoons over orbital time scales proposed by John
+Kutzbach in early 1980s.
+
+\textbf{Nonlinear response}: In this context, the nonlinear response of the
+climate system to insolation: the amount of rainfall is highly sensitive to
+insolation change in one season (summer) but largely insensitive to changes
+in the other (winter).
+
+\textbf{Threshold level}: A threshold level on insolation, below which the
+monsoon response will be too weak to leave any evidence in the geologic record.
+
+\textbf{Sanpropels}: Black organic-rich muds, found in Mediterranean sediments.
+
+\textbf{Anoxic}: Lacking the oxygen needed to convert (oxidize) organic carbon
+to inorganic form.
+
+\textbf{Clipped response}: The truncation of the summer monsoon response at the
+threshold.
+
+\textbf{Orbital tuning}: A method for dating sedimentary records on land and in
+the ocean, based on the link between summer insolation forcing and monsoon
+responses.
+
+\subsection{Review questions}
+
+\subsubsection{In what way is the orbital monsoon hypothesis an extension of
+processes driving modern monsoons?}
+
+Because seasonal monsoon circulations are driven in the modern world by changes
+in solar radiation, orbital-scale changes in summer and winter insolation
+should have produced a similar response.
+
+\subsubsection{Why does the intensity of 23000-year monsoon peaks vary at
+intervals of 100000 and 413000 years?}
+Because of the eccentricity changes happening in cycles of 100000 and 413000
+years.
+
+\subsubsection{How did the Mediterranean Sea acquire a freshwater lid during
+times when very little precipitation was falling in that region?}
+The water was delivered by Nile.
+
+\subsubsection{Explain how the opposed July/February timing of past monsoon
+changes in China and Brazil lends strong support to the orbital monsoon
+hypothesis.}
+Cave deposits (stalactites, stalagmites) form as the groundwater drips through
+water into the caves. They are constructed of calcite (CaCO$_3$). Their layers
+can be accurately dated by radiometric analysis of small amounts of thorium
+and uranium. The relative amount of two isotopes of oxygen ($^{16}$O and
+$^{18}$O) tells us about precipitation. Layers with highly negative
+$\delta^{18}$O indicate strong monsoons.
+
+Caves found in Brazil and China show a very similar pattern of monsoon strength
+over the years, and each is in phase with the midsummer in the respective
+hemisphere, thus out of phase with each other.
+
+\subsubsection{Does peak monsoon strength lag behind summer insolation
+forcing?}
+Yes, they lag 2000 years.
+
+\subsubsection{What similarities exist between monsoon changes in Pangea
+200 million years ago and those in North Africa during the last several hundred
+thousand years?}
+Monsoons filled and emptied these Pangaean lakes in response to orbital
+precessions in the same way that North African lakes have filled and emptied
+during much more recent times.
+
+\subsubsection{How do tectonic uplift and orbital variations combine to affect
+the long-term intensity of monsoons?}
+Tectonic uplift creates a slow increase in the amplitude of the orbital-scale
+cycles. Their combined effect is stronger than a simple linear combination of
+the two effects.
