--- a/content/reading_assignment3.tex
+++ b/content/reading_assignment3.tex
@@ -223,3 +223,122 @@ the long-term intensity of monsoons?}
 Tectonic uplift creates a slow increase in the amplitude of the orbital-scale
 cycles. Their combined effect is stronger than a simple linear combination of
 the two effects.
+
+\section{Reading assignment 3: Insolation control of ice sheets}
+
+Coral reefs that formed during the last 150000 years confirm that the
+$\delta^{18}$O signal is a reasonable proxy for ice sheet size. The ages of the
+most prominent $\delta^{18}$O minima correspond to the ages of coral reefs
+formed during high stands of sea level caused by ice sheet melting, and the
+amplitudes of the sea level changes estimated from the reefs correspond to the
+relative changes in ice volume inferred from the $\delta^{18}$O signal.
+
+\subsection{Key terms}
+
+\textbf{Equilibrium line}:
+The boundary between positive and negative ice mass balance (that is between
+ice sheet growth and ablation), drawn around $10 \degree$.
+
+\textbf{Milankovitch theory}: A systematic way of calculating the impact of
+astronomical changes on insolation received on Earth at diferent latitudes and
+in different seasons. Formulated by Serbian astronomer Milutin Milankovitch.
+
+Milankovitch proposed that ice growth in the Northern Hemisphere occurs
+during times when summer insolation is reduced.
+
+3 factors control the summer insolation:
+
+\begin{itemize}
+	\item Earth's tilt
+	\item How far from the Sun is the Earth at summer solstice
+	\item Orbit's eccentricity
+\end{itemize}
+
+Milankovitch noted that the most sensitive latitude for low insolation values
+is $65 \degree$N, at which the ice forms first and melts last.
+
+\textbf{Climate point}: The point where the equilibrium line intercepts the
+Earth in the higher latitudes. The amount of north-south shift of equilibrium
+line is proportional to the amount of change in summer insolation. These shifts
+can cover $10 \degree$ to $15 \degree$.
+
+\textbf{Phase lag}: The persistent delay in ice volume relative to summer
+insolation. There is also lag in ice volume responses to cycles of orbital
+tilt and precession. The lag there is roughly $\frac{1}{4}$ of the cycle
+length.
+
+\textbf{Elastic response}: Immediate sinking response of bedrock depression
+under the heavy ice load. It represents roughly 30\% of the vertical change
+in bedrock.
+
+\textbf{Viscous response}: The slow response of bedrock sinking over thousands
+of years. It follows after the elastic response and is caused by the slow flow
+of rock in a "soft" layer of the upper mantle at a depth between 100 and 350km.
+
+\textbf{Basal slip}: Meltwater at the base of the ice sheet saturates soft
+sediments and creates a lubricated layer across which ice can slide.
+
+\textbf{Termination}: Abrupt deglaciation.
+
+\subsection{Review questions}
+
+\subsubsection{What is the equilibrium line and why is it important?}
+The equilibrium line is the boundary between ice sheet growth and ablation.
+It is important because after crossing it the ablation accelerates. Ice sheet
+doesn't accelerate towards lower temperatures because at very low temperatures
+not much snow falls.
+
+\subsubsection{Why are northern ice sheets likely to be more responsive to
+insolation changes than ice in Antarctica?}
+
+\subsubsection{Why does the size of a growing or melting ice sheet lag well
+behind changes in insolation?}
+Both growth and melting is very slow. The rate at which ice grows reaches its
+maximum when the summer insolation has reached its minimum. The ice sheet then
+grows and continue to grow even as summer insolation is increasing again.
+An analogous argument is made about ablation. Even if its rate reaches maximum
+at peak summer insolation, it takes time for ablation to accumulate.
+
+\subsubsection{How does the delay in bedrock response to ice loading or
+unloading act as a positive feedback on ice volume?}
+Ice sheet grows $\rightarrow$ Bedrock sinking delayed for thousands of years
+(viscuous response) $\rightarrow$ Ice sheet stays at higher, colder elevations
+$\rightarrow$ More positive ice mass balance $\rightarrow$ Ice grows faster
+
+Ice sheet melts $\rightarrow$ Bedrock rebound delayed for thousands of years
+(viscuous response) $\rightarrow$ Ice sheet stays at lower, warmer elevations
+$\rightarrow$ More negative ice mass balance $\rightarrow$ Ice melts faster
+
+\subsubsection{If the average amplitude of a 41000-year $\delta^{18}$O cycle
+in the deep North Atlantic prior to $0.9$ Myr ago was $1.0$‰, and if changes
+in ice volume account for half of that total, how large was the average changes
+in deep-water temperature?}
+
+\subsubsection{How do corals provide an indication of the volume of water
+tied up in ice sheets on land?}
+Some coral species grow just below sea levels and have strong structural
+frameworks that remain intact long after individual coral organisms have died
+and that preserve records of sea level positions. Old coral reefs can be dated
+by radiometric decay methods. Their skeletons contain small amounts of
+$^{234}$U that slowly decays to $^{230}$Th.
+
+\subsubsection{What has been the average rate of uplift of a coral reef formed
+during the last interglaciation 125000 years ago and now lying 131 meters above
+sea level?}
+$U = \frac{Ht - 6}{125} = \frac{131 - 6}{125} = 1m/1000yr$
+
+\subsubsection{Which part of the Milankovitch theory has proven accurate? Which
+parts are insufficient?}
+It explains the presence of ice volume responses at 41000 and 23000 years and
+why they lag several thousand years behind he summer insolation forcing. But
+it fails to explain the dominance of the 41000-year cycle over the 23000-year
+signal for almost 2 Myr and it does not account for the emergence of large
+oscillations near 100000 years in the last million years.
+
+\subsubsection{If a reef on New Guinea that has been dated to 104000 years
+formed at 17m below modern sea levels, and if the average uplift rate on that
+island has been 2m per thousand years, what is the current elevation of that
+reef?}
+$2m = \frac{Ht - 17}{104}$\\
+$Ht - 17 = 208m$\\
+$Ht = 225m$
