--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 \usepackage{gensymb}
 \usepackage{graphicx}
 \usepackage{amsmath}
+\usepackage{float}
 \usepackage[a4paper, total={8in, 10in}]{geometry}
 
 \title{Climate Change - Geological Perspective at Stockholms Universitet}
@@ -19,5 +20,6 @@
 \input{content/reading_assignment2}
 \input{content/lecture2}
 \input{content/reading_assignment3}
+\input{content/lecture3}
 
 \end{document}
