Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -22,5 +22,6 @@
 \input{content/reading_assignment3}
 \input{content/lecture3}
 \input{content/reading_assignment4}
+\input{content/lecture4}
 
 \end{document}
