Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -23,5 +23,6 @@
 \input{content/lecture3}
 \input{content/reading_assignment4}
 \input{content/lecture4}
+\input{content/reading_assignment5}
 
 \end{document}
