--- a/content/reading_assignment5.tex
+++ b/content/reading_assignment5.tex
@@ -10,8 +10,8 @@ between icehouse and hothouse.
 
 Occurrence of glacial debris near sea level in the tropics.
 
-Earth's landmasses were most likely clustered near the equator during the global
-glaciations that took place around 600 million years ago.
+Earth's landmasses were most likely clustered near the equator during the
+global glaciations that took place around 600 million years ago.
 
 Albedo: ice sheets reflect more of Sun's energy than dark seawater.
 
@@ -54,9 +54,57 @@ high enough, Kirschvink proposed, to heat the planet and end the global freeze.
 \textbf{4 stages of Snowball Earth}
 \begin{itemize}
     \item \textbf{Snowball Earth Prologue}
+    \begin{itemize}
+    	\item landmass breakup 770 Myr ago
+	\item formerly land-locked areas closer to oceanic sources of moisture
+	\item increased rainfall erodes continental rocks
+	\item global temperatures fall, carbon-dioxide gets removed from the
+	air
+	\item the ice sheets reflect sunlight, starting positive feedback
+	\item planet covered in ice within a millenium
+    \end{itemize}
     \item \textbf{Snowball Earth at its coldest}
+    \begin{itemize}
+    	\item avg global temperatures fall to $-50 \degree$
+	\item oceans ice over to the depth of one kilometer
+	\item most microscopic marine organisms die but some live around
+	volcanic hot springs
+	\item cold dry air, no precipitation
+	\item due to no precipitation, volcanic carbon dioxide is not removed
+	from the atmosphere
+	\item the planet warms and sea ice slowly thins
+    \end{itemize}
     \item \textbf{Snowball Earth as it thaws}
+    \begin{itemize}
+	\item concentrations of carbon dioxide in the atmosphere grow 1000x due
+	to 10 Myr of normal volcanic activity
+	\item greenhouse warming pushes temperatures to the melting point at
+	the equator
+	\item the open water absorbs more solar energy and speeds up the
+	warming
+    \end{itemize}
     \item \textbf{Hothouse aftermath}
+    \begin{itemize}
+	\item seawater evaporates and works with carbon dioxide to create even
+	stronger greenhouse
+	\item surface temperatures go to more than 50 degree Celsius
+	\item carbonic acid rain errodes rock debris left in the wake of
+	retreating glaciers
+	\item swollen rivers wash bicarbonate and other ions into the oceans,
+	where they form carbonate sediment
+    \end{itemize}
+\end{itemize}
+
+\textbf{Animals}
+\begin{itemize}
+	\item all animals descended from the first eukaryotes, cells with a
+	membrane-bound nucleus
+	\item by the time of the first snowball episode more than 1 Byr later,
+	eukaryotes had not developed beyond unicellular protozoa and
+	filamentous algae
+	\item the extreme climate might have pruned the eukaryote tree
+	\item all 11 animal phyla ever to inhabit the Earth emerged within a
+	narrow window of time in the aftermath of the last snowball event
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
