Updates from Overleaf

--- a/content/lecture4.tex
+++ b/content/lecture4.tex
@@ -78,4 +78,9 @@ mountain building is ongoing forming the Himalaya. All these 3 suggest that the
 climate should be cooling, not warming (when considering plate tectonics in
 isolation).
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\linewidth]{content/img/isotope_different_timescales.png}
+\end{figure}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
