--- a/main.tex
+++ b/main.tex
@@ -24,5 +24,6 @@
 \input{content/reading_assignment4}
 \input{content/lecture4}
 \input{content/reading_assignment5}
+\input{content/lecture5}
 
 \end{document}
