--- a/content/lecture5.tex
+++ b/content/lecture5.tex
@@ -43,8 +43,8 @@ refrigerations were a feature of at least middle to late Proterozoic time.
 Glaciation is evidenced to the Equators itself.
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Paleomagnetic studies of Gondwana during the Neoproterozoic
-\footnote{1 billion to 538.8 million years ago} Era}
+\subsection{Paleomagnetic studies of Gondwana during the Neoproterozoic Era}
+Neoproterozoic\footnote{1 billion to 538.8 million years ago}
 
 \begin{figure}[H]
     \centering
