--- a/main.tex
+++ b/main.tex
@@ -25,5 +25,6 @@
 \input{content/lecture4}
 \input{content/reading_assignment5}
 \input{content/lecture5}
+\input{content/reading_assignment6}
 
 \end{document}
