--- a/main.tex
+++ b/main.tex
@@ -26,5 +26,6 @@
 \input{content/reading_assignment5}
 \input{content/lecture5}
 \input{content/reading_assignment6}
+\input{content/lecture6}
 
 \end{document}
