--- a/main.tex
+++ b/main.tex
@@ -27,5 +27,6 @@
 \input{content/lecture5}
 \input{content/reading_assignment6}
 \input{content/lecture6}
+\input{content/reading_assignment7}
 
 \end{document}
