--- a/content/reading_assignment7.tex
+++ b/content/reading_assignment7.tex
@@ -101,6 +101,7 @@ Positive feedbacks (evaluated at 2x CO$_2$)
 Negative feedbacks:
 \begin{itemize}
 	\item Aerosols seeding cloud nuclei.
+	\item CO$_2$ fertilization effect.
 \end{itemize}
 
 Other effects slowing down climate change:
@@ -209,3 +210,61 @@ relevance of this conclusion based on what you have learned from this book.}
 None of the natural effects (orbital forcing, solar cycles, Milankovic cycles
 etc.) work with such strong effect on such short time scale as we are observing
 now.
+
+\section{Reading assignment: Chapter 20: Future Climatic Change}
+
+\subsection{Key terms}
+
+\textbf{CO$_2$ fertilization effect}: Increased vegetation growth caused by
+addition of CO$_2$ to the atmosphere.
+
+\textbf{ocean acidification}: The trend in the pH of the ocean to grow more
+acidic as a result of absorption of CO$_2$ emitted by humans.
+
+\textbf{methane clathrate}: A partly frozen mix of methane (CH$_4$) and slushy
+ice.
+
+\subsection{Review questions}
+
+\subsubsection{What factors will determine how much CO$_2$ humans add to the
+atmosphere in the future?}
+
+increase in carbon emissions = increase in population $\times$ change in
+emissions per person $\times$ changes in efficiency of carbon use
+
+In other words:
+
+population growth $\times$ economic growth $\times$ technology
+
+\subsubsection{Where will all of this excess carbon eventually go?}
+
+Subsurface ocean, in decades to centuries. In centuries to millenia, it will
+dissolve ocean floor and acidify the oceans.
+
+\subsubsection{In what way will the future CO$_2$ warming be like and unlike
+past CO$_2$ warmings?}
+The future warming will be characterized by fast responding parts like
+atmosphere, land surface and vegetation and slow responding parts like deep
+ocean and ice sheets. A disequilibrium between them has never been observed
+before.
+
+\subsubsection{In a 3x CO$_2$ world, where will ice of any kind still be found
+on Earth?}
+On Antarctica. Small amounts will probably reform in the Arctic in the winters.
+
+\subsubsection{Will future temperature changes be readily apparent to the
+average person? Why or why not?}
+Yes because:
+\begin{itemize}
+	\item Warming of upper to middle latitudes of around $7 \degree$.
+	\item Growing crops at more northern latitudes will be possible.
+	\item Greater stress on water sources in tropics and subtropics where
+	80\% of people live.
+	\item Sea level rise of 50cm.
+\end{itemize}
+
+\subsubsection{What are the disadvantages in drastically reducing our
+industrial emissions of sulfur and carbon?}
+
+The sulfates and their cooling properties would disappear but carbon would
+linger in the atmosphere for ages.
