Prepare for lecture 7

--- a/main.tex
+++ b/main.tex
@@ -28,5 +28,6 @@
 \input{content/reading_assignment6}
 \input{content/lecture6}
 \input{content/reading_assignment7}
+\input{content/lecture7}
 
 \end{document}
