--- a/content/lecture7.tex
+++ b/content/lecture7.tex
@@ -12,12 +12,19 @@
 	\item currently at over 400 PgC
 	\item remaining fuels allow to hit 1000-2000 PgC
 	\item PETM emissions: 3000-7000 PgC
+	\item according to business-as-usual projections, we will enter the
+	PETM levels in 2159 and go beyond them in 2278
+	\item but this is not going to happen, because we'll run out of
+	fossil fuels before that
 \end{itemize}
 
 \subsection{Atmospheric CO$_2$ concentration}
 \begin{itemize}
 	\item currently at around 350ppm
 	\item remaining fossil fuels allow for 550-750ppm
+	\item 2.13 PgM CO$_2$ corresponds to 1ppm change
+	\item according to projections, we'll run out of fossil fuels between
+	2070 and 2120 assuming business-as-usual
 \end{itemize}
 
 \subsection{Eocene greenhouse}
@@ -25,6 +32,8 @@
 	\item sea level was 65 m higher
 	\item temperature was $5-15\degree$ higher
 	\item risk for hyperthermals
+	\item 35 Ma switch from greenhouse to icehouse
+	\item burning out all fossil fuels puts us in the greenhouse conditions
 \end{itemize}
 
 \subsection{Comparison of the PETM hyperthermal with ongoing global warming}
@@ -32,6 +41,8 @@
 	\item based on carbon emission rates, ongoing global warming is
 	calculated to be an order-of-magnitude faster than at the start of the
 	PETM hyperthermal
+	\item carbon accumulation rates in PETM: $0.3-1.5$ PgC/yr, currently it
+	is $11$ PgC/yr (anthropogenic)
 \end{itemize}
 
 \subsection{"Eocene Park"}
@@ -45,4 +56,13 @@
 	\item ongoing global warming is an order-of-magnitude faster than
 	global warming at the start of the PETM
 	\item recovery from global warming is likely to take 170000 years
+\end{itemize}
+
+\subsection{Summary}
+\begin{itemize}
+	\item the biggest problem is not the amount of warming, it's the rate
+	of warming
+	\item Earth actually thrives in a warmer climate, provided that the
+	warming happens over very long timescale and ecosystem has time to
+	adapt (e.g. 60 Myr)
 \end{itemize}
