--- a/main.tex
+++ b/main.tex
@@ -29,5 +29,6 @@
 \input{content/lecture6}
 \input{content/reading_assignment7}
 \input{content/lecture7}
+\input{content/reading_assignment8}
 
 \end{document}
