--- a/main.tex
+++ b/main.tex
@@ -30,5 +30,6 @@
 \input{content/reading_assignment7}
 \input{content/lecture7}
 \input{content/reading_assignment8}
+\input{content/lecture8}
 
 \end{document}
